--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,399 +1,7 @@
-
-body {
-    font-family: 'Roboto Condensed', sans-serif;
-    color: #ffffff;
-}
-
-a {
-    text-decoration: none;
-
-}
-
-.particles-js {
-    background-color: #191a1c;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    z-index: -100;
-    width: 100%;
-    height: 100%;
-}
-
-.header {
-    background-color: #191a1c;
-    box-shadow: 0 0 40px rgba(0, 0, 0, 1);
-    z-index: 20;
-}
-
-.header__block {
-    width: 1405px;
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.header__title-logo {
-    display: flex;
-}
-
-.header__logo {
-    margin-top: 17px;
-    margin-left: 2px;
-}
-
-.header__title-logo {
-    margin-left: 26px;
-    margin-top: -25px;
-    font-size: 30px;
-    font-weight: 700;
-    text-transform: uppercase;
-}
-
-.header__title-logo--d {
-    margin-top: 15px;
-    font-size: 80px;
-    color: #94edff;
-    text-shadow: 0 0 5px #94edff, 0 0 10px #94edff, 0 0 15px #94edff;
-}
-
-.header__title-logo--ev {
-    margin-top: 64px;
-    margin-left: -5px;
-}
-
-.header__menu-items {
-    display: flex;
-    width: 500px;
-    justify-content: space-between;
-    text-transform: uppercase;
-    list-style: none;
-    font-size: 16px;
-    font-weight: 700;
-}
-
-.header__menu-link {
-    color: white;
-    padding-bottom: 15px;
-    padding-top: 10px;
-}
-
-.header__menu-link:hover {
-    color: #94edff;
-    transition: color ease-out 0.3s;
-    animation: neon-text .8s ease-in-out infinite alternate;
-}
-
-.header__menu-link::after {
-    content: "";
-    display: block;
-    position: relative;
-    top: 0;
-    width: 100%;
-    height: 4px;
-    background-color: #1fff2f;
-    box-shadow: 0 0 2px #1fff2f, 0 0 5px #1fff2f, 0 0 10px #1fff2f, 0 0 12px #1fff2f;
-    transform-origin: right;
-    transform: scaleX(0);
-    border-radius: 10px;
-    transition: transform ease-out 0.3s;
-    animation: neon-line .8s ease-in-out infinite alternate;
-}
-
-.header__menu-link:hover::after {
-    transition: transform ease-out 0.3s;
-    transform-origin: left;
-    transform: scaleX(1);
-}
-
-
-@keyframes neon-line {
-    from {
-        box-shadow:
-            0 0 2px #1fff2f,
-            0 0 5px #1fff2f,
-            0 0 10px #1fff2f,
-            0 0 12px #1fff2f;
-    }
-
-    to {
-        box-shadow:
-            0 0 2px #17c023,
-            0 0 5px #17c023,
-            0 0 10px #17c023,
-            0 0 12px #17c023,
-            0 0 15px #17c023,
-            0 0 17px #17c023;
-    }
-}
-
-@keyframes neon-text {
-    from {
-        text-shadow:
-            0 0 5px rgba(148, 237, 255, 0);
-    }
-
-    to {
-        text-shadow:
-            0 0 2px rgba(148, 237, 255, 1),
-            0 0 5px rgba(148, 237, 255, 1);
-    }
-}
-
-
-\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
-
-/* =============================================================================
-   HTML5 CSS Reset Minified - Eric Meyer
-   ========================================================================== */
-
-html,
-body,
-div,
-span,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-abbr,
-address,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-samp,
-small,
-strong,
-sub,
-sup,
-var,
-b,
-i,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent
-}
-
-body {
-    line-height: 1
-}
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-    display: block
-}
-
-nav ul {
-    list-style: none
-}
-
-blockquote,
-q {
-    quotes: none
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-    content: none
-}
-
-a {
-    margin: 0;
-    padding: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
-    text-decoration: none
-}
-
-mark {
-    background-color: #ff9;
-    color: #000;
-    font-style: italic;
-    font-weight: bold
-}
-
-del {
-    text-decoration: line-through
-}
-
-abbr[title],
-dfn[title] {
-    border-bottom: 1px dotted;
-    cursor: help
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0
-}
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0
-}
-
-input,
-select {
-    vertical-align: middle
-}
-
-li {
-    list-style: none
-}
-
-
-/* =============================================================================
-      My CSS
-      ========================================================================== */
-
-/* ---- base ---- */
-
-html,
-body {
-    width: 100%;
-    height: 100%;
-    background: #111;
-}
-
-html {
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-body {
-    font: normal 75% Arial, Helvetica, sans-serif;
-}
-
-canvas {
-    display: block;
-    vertical-align: bottom;
-}
-
-
-/* ---- stats.js ---- */
-
-.count-particles {
-    background: #000022;
-    position: absolute;
-    top: 48px;
-    left: 0;
-    width: 80px;
-    color: #13E8E9;
-    font-size: .8em;
-    text-align: left;
-    text-indent: 4px;
-    line-height: 14px;
-    padding-bottom: 2px;
-    font-family: Helvetica, Arial, sans-serif;
-    font-weight: bold;
-}
-
-.js-count-particles {
-    font-size: 1.1em;
-}
-
-#stats,
-.count-particles {
-    -webkit-user-select: none;
-    margin-top: 5px;
-    margin-left: 5px;
-}
-
-#stats {
-    border-radius: 3px 3px 0 0;
-    overflow: hidden;
-}
-
-.count-particles {
-    border-radius: 0 0 3px 3px;
-}
-
-
-/* ---- particles.js container ---- */
-
-.flex {
-    display: flex;
-    justify-content: space-between;
-    width: 10px;
-}
-
-#particles-js {
-    position: absolute;
-    z-index: 1;
-    width: 252px;
-    height: 100%;
-    background-color: #fcf8f800;
-    background-image: url('');
-    background-size: cover;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-}
-
-
 @import "global-style.scss";
+@import "variables.scss";
 @import "scrollbar/scrollbar.scss";
+@import "header/header.scss";
+@import "main/main.scss";
+@import "materials/materials.scss";
+@import "block/block.scss";
