--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,3 +5,10 @@
 @import "main/main.scss";
 @import "materials/materials.scss";
 @import "block/block.scss";
+@import "paginator/paginator.scss";
+@import "statistic/statistic.scss";
+@import "sidebar/sidebar.scss";
+@import "categories/categories.scss";
+@import "social/social.scss";
+@import "about/about.scss";
+@import "footer/footer.scss";
