--- a/source/sass/header/header.scss
+++ b/source/sass/header/header.scss
@@ -201,7 +201,7 @@
   letter-spacing: 0;
   border-radius: 10px;
   padding-left: 16px;
-  padding-right: 26px;
+  padding-right: 36px;
 }
 
 .search__box:focus {
@@ -215,16 +215,20 @@
   height: 30px;
   outline: none;
   position: absolute;
-  right: 9px;
-  top: 3px;
+  right: 5px;
+  top: -2px;
+  transition: transform 0.2s ease-in-out;
+  padding: 20px;
 }
 
-.search__box:focus~.search__button {
+.search__button:hover {
   background: url(/img/search-focus.png) 50% 50% no-repeat;
+  transform: rotate(-90deg);
+  transition: transform 0.2s ease-in-out;
   height: 30px;
   width: 30px;
-  right: 8px;
-  top: 2px;
+  right: 5px;
+  top: -3px;
 }
 
 .particles {
