Первая страница сайта полностью готоваgit status! УРА!

--- a/source/sass/about/about.scss
+++ b/source/sass/about/about.scss
@@ -20,7 +20,7 @@
 }
 
 .about__logo {
-    background: url(/img/logo.png) 50% 50% no-repeat;
+    background: url(../img/logo.png) 50% 50% no-repeat;
     width: 70px;
     height: 70px;
     background-size: 85px;
