--- a/source/sass/categories/categories.scss
+++ b/source/sass/categories/categories.scss
@@ -161,43 +161,43 @@
 }
 
 .categories__items--program::before {
-    background: url(/img/003-programming.svg) 50% 50% no-repeat;
+    background: url(../img/003-programming.svg) 50% 50% no-repeat;
 }
 
 .categories__items--program::after {
-    background: url(/img/003-programming.svg) 50% 50% no-repeat;
+    background: url(../img/003-programming.svg) 50% 50% no-repeat;
 }
 
 .categories__items--port::before {
-    background: url(/img/002-suitcase.svg) 50% 50% no-repeat;
+    background: url(../img/002-suitcase.svg) 50% 50% no-repeat;
 }
 
 .categories__items--port::after {
-    background: url(/img/002-suitcase.svg) 50% 50% no-repeat;
+    background: url(../img/002-suitcase.svg) 50% 50% no-repeat;
 }
 
 .categories__items--windows::before {
-    background: url(/img/002-windows.svg) 50% 50% no-repeat;
+    background: url(../img/002-windows.svg) 50% 50% no-repeat;
 }
 
 .categories__items--windows::after {
-    background: url(/img/002-windows.svg) 50% 50% no-repeat;
+    background: url(../img/002-windows.svg) 50% 50% no-repeat;
 }
 
 .categories__items--design::before {
-    background: url(/img/001-photoshop.svg) 50% 50% no-repeat;
+    background: url(../img/001-photoshop.svg) 50% 50% no-repeat;
 }
 
 .categories__items--design::after {
-    background: url(/img/001-photoshop.svg) 50% 50% no-repeat;
+    background: url(../img/001-photoshop.svg) 50% 50% no-repeat;
 }
 
 .categories__items--dev::before {
-    background: url(/img/006-html-5.svg) 50% 50% no-repeat;
+    background: url(../img/006-html-5.svg) 50% 50% no-repeat;
 }
 
 .categories__items--dev::after {
-    background: url(/img/006-html-5.svg) 50% 50% no-repeat;
+    background: url(../img/006-html-5.svg) 50% 50% no-repeat;
 }
 
 // Классы для JS
