--- a/source/sass/block/block.scss
+++ b/source/sass/block/block.scss
@@ -95,7 +95,7 @@
 .block__kategory-fonts::after {
     content: "";
     position: absolute;
-    background: url(/img/font-size.svg) 50% 50% no-repeat;
+    background: url(../img/font-size.svg) 50% 50% no-repeat;
     background-size: 16px;
     width: 20px;
     top: 0;
@@ -106,7 +106,7 @@
 .block__kategory-program::after {
     content: "";
     position: absolute;
-    background: url(/img/002-windows.svg) 50% 50% no-repeat;
+    background: url(../img/002-windows.svg) 50% 50% no-repeat;
     background-size: 16px;
     width: 20px;
     top: 0;
@@ -117,7 +117,7 @@
 .block__kategory-design::after {
     content: "";
     position: absolute;
-    background: url(/img/001-photoshop.svg) 50% 50% no-repeat;
+    background: url(../img/001-photoshop.svg) 50% 50% no-repeat;
     background-size: 16px;
     width: 20px;
     top: 0;
@@ -161,7 +161,7 @@
 .block__link--detail::before {
     content: "";
     position: absolute;
-    background: url(/img/002-more-details-circular-button.svg) 50% 50% no-repeat;
+    background: url(../img/002-more-details-circular-button.svg) 50% 50% no-repeat;
     top: 8px;
     left: 6px;
     width: 16px;
@@ -179,7 +179,7 @@
 .block__link--download::before {
     content: "";
     position: absolute;
-    background: url(/img/001-download-arrow.svg) 50% 50% no-repeat;
+    background: url(../img/001-download-arrow.svg) 50% 50% no-repeat;
     top: 8px;
     left: 6px;
     width: 16px;
