--- a/source/sass/header/header.scss
+++ b/source/sass/header/header.scss
@@ -17,13 +17,13 @@
 }
 
 .header__logo:hover {
-  background: url(/img/logo-hover.png) 50% 50% no-repeat;
+  background: url(../img/logo-hover.png) 50% 50% no-repeat;
   background-size: 100px;
   transition: all 0.2s ease-in-out;
 }
 
 .header__logo {
-  background: url(/img/logo.png) 50% 50% no-repeat;
+  background: url(../img/logo.png) 50% 50% no-repeat;
   width: 100px;
   height: 45px;
   background-size: 100px;
@@ -85,7 +85,7 @@
   position: absolute;
   top: 9px;
   left: 1px;
-  background: url(/img/012-fire.svg) 50% 50% no-repeat;
+  background: url(../img/012-fire.svg) 50% 50% no-repeat;
   background-size: 20px;
   width: 20px;
   height: 20px;
@@ -102,7 +102,7 @@
   position: absolute;
   top: 9px;
   left: 0;
-  background: url(/img/004-news.svg) 50% 50% no-repeat;
+  background: url(../img/004-news.svg) 50% 50% no-repeat;
   background-size: 20px;
   width: 20px;
   height: 20px;
@@ -117,7 +117,7 @@
   position: absolute;
   top: 9px;
   left: 0;
-  background: url(/img/boy.svg) 50% 50% no-repeat;
+  background: url(../img/boy.svg) 50% 50% no-repeat;
   background-size: 19px;
   width: 20px;
   height: 20px;
@@ -132,7 +132,7 @@
   position: absolute;
   top: 9px;
   left: 0;
-  background: url(/img/005-blogging.svg) 50% 50% no-repeat;
+  background: url(../img/005-blogging.svg) 50% 50% no-repeat;
   background-size: 20px;
   width: 20px;
   height: 20px;
@@ -209,7 +209,7 @@
 }
 
 .search__button {
-  background: url(/img/search.png) 50% 50% no-repeat;
+  background: url(../img/search.png) 50% 50% no-repeat;
   border: none;
   width: 30px;
   height: 30px;
@@ -222,7 +222,7 @@
 }
 
 .search__button:hover {
-  background: url(/img/search-focus.png) 50% 50% no-repeat;
+  background: url(../img/search-focus.png) 50% 50% no-repeat;
   transform: rotate(-90deg);
   transition: transform 0.2s ease-in-out;
   height: 30px;
