--- a/source/sass/materials/materials.scss
+++ b/source/sass/materials/materials.scss
@@ -2,7 +2,7 @@
     display: flex;
     position: relative;
     flex-direction: column;
-    background: url(/img/background.png);
+    background: url(../img/background.png);
     margin-top: 50px;
     margin-right: 27px;
     padding: 64px 38px 100px 38px;
