--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,2 +1,16 @@
 $bold: 'Roboto',
 sans-serif;
+
+$white: #ffffff;
+$blue: #94edff;
+$bright-blue: #00ffff;
+$green: #1fff2f;
+$green-pulse: #17c023;
+$purple: #f853fc;
+$pink: #cf6fb2;
+$orange: #f5a100;
+$bright-gray: #42474b;
+$gray: #202023;
+$dark-gray: #161618;
+$light-gray: #1d1d20;
+$carbon: #191a1c;
