--- a/source/sass/block/block.scss
+++ b/source/sass/block/block.scss
@@ -11,7 +11,7 @@
 }
 
 .block:hover {
-    box-shadow: 0 0 2px #94edff, 0 0 5px #94edff, 0 0 10px #94edff;
+    box-shadow: 0 0 2px $blue, 0 0 5px $blue, 0 0 10px $blue;
     transition: box-shadow 0.2s ease-in-out;
     animation: neon-block 1s ease-in-out infinite alternate;
     animation-delay: 0.3s;
@@ -53,7 +53,7 @@
 
 .block__title {
     display: inline-block;
-    color: #f5a100;
+    color: $orange;
     font-size: 20px;
     margin-top: 18px;
     margin-bottom: 6px;
@@ -88,7 +88,7 @@
 }
 
 .block__kategory-link:hover {
-    color: #94edff;
+    color: $blue;
     transition: color 0.2s ease-in-out;
 }
 
@@ -153,7 +153,7 @@
 
 .block__link:hover {
     color: white;
-    box-shadow: 0 0 2px #04dede, 0 0 5px #04dede, 0 0 10px #04dede;
+    box-shadow: 0 0 2px $bright-blue, 0 0 5px $bright-blue, 0 0 10px $bright-blue;
     transition: box-shadow 0.2s ease-in-out;
     transition: all 0.4s ease-in-out;
 }
@@ -196,26 +196,26 @@
 
 @keyframes neon-block {
     0% {
-        box-shadow: 0 0 2px #94edff,
-            0 0 5px #94edff,
-            0 0 10px #94edff;
+        box-shadow: 0 0 2px $blue,
+            0 0 5px $blue,
+            0 0 10px $blue;
     }
 
     100% {
-        box-shadow: 0 0 4px #94edff, 0 0 7px #94edff, 0 0 15px #94edff;
+        box-shadow: 0 0 4px $blue, 0 0 7px $blue, 0 0 15px $blue;
     }
 }
 
 @keyframes close-neon-block {
     0% {
-        box-shadow: 0 0 2px #94edff,
-            0 0 5px #94edff,
-            0 0 10px #94edff;
+        box-shadow: 0 0 2px $blue,
+            0 0 5px $blue,
+            0 0 10px $blue;
     }
 
     100% {
-        box-shadow: 0 0 0 #94edff,
-            0 0 0 #94edff,
-            0 0 0 #94edff;
+        box-shadow: 0 0 0 $blue,
+            0 0 0 $blue,
+            0 0 0 $blue;
     }
 }
