--- a/source/sass/header/header.scss
+++ b/source/sass/header/header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: #191a1c;
+  background-color: $carbon;
 }
 
 .header__block {
@@ -51,8 +51,8 @@
   margin: 0;
   margin-top: -10px;
   font-size: 80px;
-  color: #94edff;
-  text-shadow: 0 0 5px #94edff, 0 0 10px #94edff, 0 0 15px #94edff;
+  color: $blue;
+  text-shadow: 0 0 5px $blue, 0 0 10px $blue, 0 0 15px $blue;
 }
 
 .header__title-logo--ev {
@@ -148,7 +148,6 @@
   padding-bottom: 15px;
   padding-left: 25px;
   padding-top: 10px;
-  // padding-left: 20px;
 }
 
 .header__menu-link:hover {
@@ -164,8 +163,8 @@
   top: 0;
   width: 100%;
   height: 4px;
-  background-color: #1fff2f;
-  box-shadow: 0 0 2px #1fff2f, 0 0 5px #1fff2f, 0 0 10px #1fff2f, 0 0 12px #1fff2f;
+  background-color: $green;
+  box-shadow: 0 0 2px $green, 0 0 5px $green, 0 0 10px $green, 0 0 12px $green;
   transform-origin: right;
   transform: scaleX(0);
   border-radius: 10px;
@@ -193,7 +192,7 @@
   height: 36px;
   background-color: #ffffff00;
   outline: none;
-  border: solid 1px #94edff;
+  border: solid 1px $blue;
   margin-top: 0;
   color: #afaaaa;
   font-size: 16px;
@@ -205,7 +204,7 @@
 }
 
 .search__box:focus {
-  box-shadow: 0 0 2px #94edff, 0 0 5px #94edff, 0 0 10px #94edff, 0 0 20px #94edff;
+  box-shadow: 0 0 2px $blue, 0 0 5px $blue, 0 0 10px $blue, 0 0 20px $blue;
 }
 
 .search__button {
@@ -232,7 +231,7 @@
 }
 
 .particles {
-  background-color: #191a1c;
+  background-color: $carbon;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -258,11 +257,11 @@
 
 @keyframes neon-line {
   from {
-    box-shadow: 0 0 2px #1fff2f, 0 0 5px #1fff2f, 0 0 10px #1fff2f, 0 0 12px #1fff2f;
+    box-shadow: 0 0 2px $green, 0 0 5px $green, 0 0 10px $green, 0 0 12px $green;
   }
 
   to {
-    box-shadow: 0 0 2px #17c023, 0 0 5px #17c023, 0 0 10px #17c023, 0 0 12px #17c023, 0 0 15px #17c023, 0 0 17px #17c023;
+    box-shadow: 0 0 2px $green-pulse, 0 0 5px $green-pulse, 0 0 10px $green-pulse, 0 0 12px $green-pulse, 0 0 15px $green-pulse, 0 0 17px $green-pulse;
   }
 }
 
@@ -272,7 +271,7 @@
   }
 
   to {
-    text-shadow: 0 0 2px rgba(148, 237, 255, 1), 0 0 5px rgba(148, 237, 255, 1);
+    text-shadow: 0 0 2px $blue, 0 0 5px $blue;
   }
 }
 
