--- a/source/sass/scrollbar/scrollbar.scss
+++ b/source/sass/scrollbar/scrollbar.scss
@@ -3,12 +3,12 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 3px #94edff;
-    -webkit-box-shadow: inset 0 0 3px #94edff;
+    box-shadow: inset 0 0 3px $blue;
+    -webkit-box-shadow: inset 0 0 3px $blue;
     background-color: #191a1c;
 }
 
 body::-webkit-scrollbar-thumb {
-    background: linear-gradient(to right, #94edff 20%, #000000 21%, rgb(0, 0, 0) 39%, #94edff 40%, #94edff 60%, #000000 61%, #000000 79%, #94edff 80%, );
+    background: linear-gradient(to right, $blue 20%, #000000 21%, rgb(0, 0, 0) 39%, $blue 40%, $blue 60%, #000000 61%, #000000 79%, $blue 80%, );
     outline: none;
 }
