--- a/source/sass/statistic/statistic.scss
+++ b/source/sass/statistic/statistic.scss
@@ -13,6 +13,25 @@
     margin-left: 59px;
 }
 
+
+// .statistic__online::after {
+
+    //     content: attr(aria-label);
+    //     position: absolute;
+    //     text-transform: uppercase;
+    //     font-family: $bold;
+    //     top: 180%;
+    //     left: -300%;
+    //     background: #383838;
+    //     color: #fff;
+    //     padding: 8px 10px;
+    //     font-size: 12px;
+    //     line-height: 12px;
+    //     white-space: nowrap;
+    //     text-shadow: 0 -1px 0 #000;
+    //     box-shadow: 4px 4px 8px rgba(0, 0, 0, .3);
+    // }
+
 .statistic__files {
     position: relative;
     margin: 0 66px;
@@ -43,6 +62,7 @@
 
 .statistic__title {
     position: absolute;
+    top: 24px;
     left: -8px;
     font-size: 12px;
     color: $bright-gray;
