--- a/source/sass/block/block.scss
+++ b/source/sass/block/block.scss
@@ -125,6 +125,17 @@
     height: 20px;
 }
 
+.block__kategory-portfolio::after {
+    content: "";
+    position: absolute;
+    background: url(../img/002-suitcase.svg) 50% 50% no-repeat;
+    background-size: 16px;
+    width: 20px;
+    top: 0;
+    left: -5px;
+    height: 20px;
+}
+
 .block__desc {
     margin-top: 4px;
     font-size: 15px;
