--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,7 @@
 @import "header/header.scss";
 @import "main/main.scss";
 @import "materials/materials.scss";
+@import "welcome/welcome.scss";
 @import "block/block.scss";
 @import "paginator/paginator.scss";
 @import "statistic/statistic.scss";
