--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,7 +5,10 @@
 @import "header/header.scss";
 @import "main/main.scss";
 @import "materials/materials.scss";
+@import "slider/slider.scss";
+@import "portfolio/portfolio.scss";
 @import "welcome/welcome.scss";
+@import "skills/skills.scss";
 @import "block/block.scss";
 @import "paginator/paginator.scss";
 @import "statistic/statistic.scss";
