--- a/source/sass/about/about.scss
+++ b/source/sass/about/about.scss
@@ -6,7 +6,7 @@
 }
 
 .about__block {
-    width: 1405px;
+    width: 1283px;
     margin-left: auto;
     margin-right: auto;
     padding-top: 15px;
@@ -23,7 +23,7 @@
 }
 
 .about__logo {
-    background: url(../img/logo.png) 50% 50% no-repeat;
+    background: url(../img/logo.webp) 50% 50% no-repeat;
     width: 70px;
     height: 70px;
     background-size: 85px;
