--- a/source/sass/block/block.scss
+++ b/source/sass/block/block.scss
@@ -1,7 +1,7 @@
 .block {
     display: flex;
     box-sizing: border-box;
-    width: 973px;
+    width: 100%;
     margin-bottom: 24px;
     background-color: rgba(17, 18, 19, 0.75);
     flex-wrap: nowrap;
@@ -35,7 +35,7 @@
 }
 
 .block__text {
-    padding-left: 0;
+    padding: 0 30px 0 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -155,7 +155,7 @@
 }
 
 .block__link {
-    margin-left: 43px;
+    margin-left: 20px;
     font-size: 15px;
     color: #9b9b9b;
     background-color: #2b2d30;
