--- a/source/sass/materials/materials.scss
+++ b/source/sass/materials/materials.scss
@@ -2,12 +2,13 @@
     display: flex;
     position: relative;
     flex-direction: column;
-    background: url(../img/background.png);
+    background: url(../img/background.webp);
     margin-top: 50px;
     margin-right: 27px;
     padding: 64px 38px 100px 38px;
     z-index: 10;
-    width: 1048px;
+    min-width: 961px;
+    width: 1083px;
     box-sizing: border-box;
 }
 
