--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,6 +1,7 @@
+$tablet-width: 768px;
+$desktop-width: 1300px;
 $bold: 'Roboto',
 sans-serif;
-
 $white: #ffffff;
 $blue: #94edff;
 $bright-blue: #00ffff;
