--- a/source/sass/block/block.scss
+++ b/source/sass/block/block.scss
@@ -14,8 +14,13 @@
 .block:hover {
     box-shadow: 0 0 2px $blue, 0 0 5px $blue, 0 0 10px $blue;
     transition: box-shadow 0.2s ease-in-out;
-    animation: neon-block 1s ease-in-out infinite alternate;
-    animation-delay: 0.3s;
+}
+
+@media (min-width: $desktop-width) {
+    .block:hover {
+        animation: neon-block 1s ease-in-out infinite alternate;
+        animation-delay: 0.3s;
+    }
 }
 
 .block__poster {
