--- a/source/sass/particles/particles.scss
+++ b/source/sass/particles/particles.scss
@@ -14,10 +14,18 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 50%;
-    width: 100%;
-    height: 100%;
-    display: block;
+    width: 0;
+    height: 0;
+    display: none;
     position: fixed;
     box-sizing: border-box;
     z-index: -10;
+}
+
+@media (min-width: $desktop-width) {
+    .particles {
+        width: 100%;
+        height: 100%;
+        display: block;
+    }
 }
