--- a/source/sass/statistic/statistic.scss
+++ b/source/sass/statistic/statistic.scss
@@ -1,12 +1,18 @@
 .statistic {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    width: 295px;
-    box-sizing: border-box;
-    margin-top: 35px;
-    margin-bottom: 31px;
-    justify-content: flex-start;
+    display: none;
+}
+
+@media (min-width: $desktop-width) {
+    .statistic {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        width: 295px;
+        box-sizing: border-box;
+        margin-top: 35px;
+        margin-bottom: 31px;
+        justify-content: flex-start;
+    }
 }
 
 .statistic__online {
