--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,6 @@
 @import "global-style.scss";
 @import "variables.scss";
+@import "slideout/slideout.scss";
 @import "particles/particles.scss";
 @import "scrollbar/scrollbar.scss";
 @import "header/header.scss";
