--- a/source/sass/header/header.scss
+++ b/source/sass/header/header.scss
@@ -3,8 +3,8 @@
 }
 
 .header__block {
-    min-width: 1283px;
-    max-width: 1440px;
+    width: 100%;
+    padding: 0 10px;
     box-sizing: border-box;
     display: flex;
     margin-left: auto;
@@ -14,61 +14,29 @@
 }
 
 .header__logo {
-    margin-top: 14px;
-    margin-left: 10px;
-    width: 100px;
-    height: 45px;
+    width: 68px;
+    height: 39px;
 }
 
 .header__logo-link {
     position: relative;
-    width: 100px;
-    height: 45px;
 }
 
 .header__logo-link::before {
     content: "";
     position: absolute;
-    background: url(../img/logo.webp) 50% 50% no-repeat;
-    width: 100px;
-    height: 45px;
-    background-size: 100px;
-    transition: all 0.2s ease-out;
-}
-
-.header__logo:hover .header__logo-link::before {
-    position: absolute;
     background: url(../img/logo-hover.webp) 50% 50% no-repeat;
-    background-size: 100px;
-    transition: all 0.2s ease-out;
+    width: 68px;
+    height: 39px;
+    background-size: 68px;
 }
 
-// .header__logo-link::before {
-//     content: "";
-//     position: absolute;
-//     background: url(../img/logo.webp) 50% 50% no-repeat;
-//     width: 100px;
-//     height: 45px;
-//     background-size: 100px;
-//     transition: all 0.2s ease-out;
-// }
-// .header__logo-link::before:hover {
-//     content: "";
-//     background: url(../img/logo-hover.webp) 50% 50% no-repeat;
-//     position: absolute;
-//     width: 100px;
-//     height: 45px;
-//     background-size: 100px;
-//     transition: all 0.2s ease-in-out;
-// }
 .header__title-logo {
     display: flex;
     margin: 0;
-    margin-right: 44px;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 700;
     text-transform: uppercase;
-    margin-left: 20px;
     height: 78px;
 }
 
@@ -80,7 +48,7 @@
 .header__title-logo--d {
     margin: 0;
     margin-top: -10px;
-    font-size: 80px;
+    font-size: 70px;
     color: $blue;
     text-shadow: 0 0 5px $blue, 0 0 10px $blue, 0 0 15px $blue;
 }
@@ -91,174 +59,219 @@
     margin-left: -4px;
 }
 
-.header__menu-items {
-    box-sizing: border-box;
-    display: flex;
-    width: 470px;
-    margin: 33px 20px 0 20px;
-    justify-content: space-between;
-    text-transform: uppercase;
-    list-style: none;
-    font-size: 16px;
-    font-weight: 700;
-    padding-left: 0;
-}
-
-.header__menu-item {
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-.header__menu-link--best::before {
-    content: "";
-    position: absolute;
-    top: 9px;
-    left: 1px;
-    background: url(../img/012-fire.svg) 50% 50% no-repeat;
-    background-size: 20px;
-    width: 20px;
-    height: 20px;
-}
-
-.header__menu-link--best:hover::before {
-    top: 9px;
-    left: 1px;
-    animation: bounce 1s 1 ease-in-out;
-}
-
-.header__menu-link--news::before {
-    content: "";
-    position: absolute;
-    top: 9px;
-    left: 0;
-    background: url(../img/004-news.svg) 50% 50% no-repeat;
-    background-size: 20px;
-    width: 20px;
-    height: 20px;
-}
-
-.header__menu-link--news:hover::before {
-    animation: bounce 1s 1 ease-in-out;
-}
-
-.header__menu-link--biog::before {
-    content: "";
-    position: absolute;
-    top: 9px;
-    left: 0;
-    background: url(../img/boy.svg) 50% 50% no-repeat;
-    background-size: 19px;
-    width: 20px;
-    height: 20px;
-}
-
-.header__menu-link--biog:hover::before {
-    animation: bounce 1s 1 ease-in-out;
-}
-
-.header__menu-link--blog::before {
-    content: "";
-    position: absolute;
-    top: 9px;
-    left: 0;
-    background: url(../img/005-blogging.svg) 50% 50% no-repeat;
-    background-size: 20px;
-    width: 20px;
-    height: 20px;
-}
-
-.header__menu-link--blog:hover::before {
-    animation: bounce 1s 1 ease-in-out;
-}
-
-.header__menu-link {
-    color: white;
-    position: relative;
-    padding-bottom: 15px;
-    padding-left: 25px;
-    padding-top: 10px;
-}
-
-.header__menu-link:hover {
-    color: #94edff;
-    transition: color ease-out 0.3s;
-    animation: neon-text 0.8s ease-in-out infinite alternate;
-}
-
-.header__menu-link::after {
-    content: "";
-    display: block;
-    position: relative;
-    top: 0;
-    width: 100%;
-    height: 4px;
-    background-color: $green;
-    box-shadow: 0 0 2px $green, 0 0 5px $green, 0 0 10px $green, 0 0 12px $green;
-    transform-origin: right;
-    transform: scaleX(0);
-    border-radius: 10px;
-    transition: transform ease-out 0.3s;
-    animation: neon-line 0.8s ease-in-out infinite alternate;
-}
-
-.header__menu-link:hover::after {
-    transition: transform ease-out 0.3s;
-    transform-origin: left;
-    transform: scaleX(1);
+.header__menu {
+    display: none;
 }
 
 .header__search {
-    height: 50px;
-    margin-top: 21px;
-    margin-right: 10px;
+    display: none;
 }
 
-.search__form {
-    position: relative;
-}
-
-.search__box {
-    box-sizing: border-box;
-    width: 396px;
-    height: 36px;
-    background-color: #ffffff00;
-    outline: none;
-    border: solid 1px $blue;
-    margin-top: 0;
-    color: #afaaaa;
-    font-size: 16px;
-    font-weight: 100;
-    letter-spacing: 0;
-    border-radius: 10px;
-    padding-left: 16px;
-    padding-right: 36px;
-}
-
-.search__box:focus {
-    box-shadow: 0 0 2px $blue, 0 0 5px $blue, 0 0 10px $blue, 0 0 20px $blue;
-}
-
-.search__button {
-    background: url(../img/search.webp) 50% 50% no-repeat;
-    border: none;
-    width: 30px;
-    height: 30px;
-    outline: none;
-    position: absolute;
-    right: 5px;
-    top: -2px;
-    transition: transform 0.2s ease-in-out;
-    padding: 20px;
-}
-
-.search__button:hover {
-    background: url(../img/search-focus.webp) 50% 50% no-repeat;
-    transform: rotate(-90deg);
-    transition: transform 0.2s ease-in-out;
-    height: 30px;
-    width: 30px;
-    right: 5px;
-    top: -3px;
+@media (min-width: $desktop-width) {
+    .header__block {
+        min-width: 1283px;
+        max-width: 1440px;
+    }
+    .header__logo {
+        margin-top: 14px;
+        margin-left: 10px;
+        width: 100px;
+        height: 45px;
+    }
+    .header__logo-link {
+        width: 100px;
+        height: 45px;
+    }
+    .header__logo-link::before {
+        content: "";
+        position: absolute;
+        background: url(../img/logo.webp) 50% 50% no-repeat;
+        width: 100px;
+        height: 45px;
+        background-size: 100px;
+        transition: all 0.2s ease-out;
+    }
+    .header__logo:hover .header__logo-link::before {
+        position: absolute;
+        background: url(../img/logo-hover.webp) 50% 50% no-repeat;
+        background-size: 100px;
+        transition: all 0.2s ease-out;
+    }
+    .header__title-logo {
+        margin-right: 44px;
+        font-size: 30px;
+        margin-left: 20px;
+    }
+    .header__title-logo--skar {
+        margin: 0;
+        margin-top: 5px;
+    }
+    .header__title-logo--d {
+        margin: 0;
+        margin-top: -10px;
+        font-size: 70px;
+        color: $blue;
+        text-shadow: 0 0 5px $blue, 0 0 10px $blue, 0 0 15px $blue;
+    }
+    .header__title-logo--ev {
+        margin: 0;
+        margin-top: 40px;
+        margin-left: -4px;
+    }
+    .header__menu {
+        display: block;
+    }
+    .header__menu-items {
+        box-sizing: border-box;
+        display: flex;
+        width: 470px;
+        margin: 33px 20px 0 20px;
+        justify-content: space-between;
+        text-transform: uppercase;
+        list-style: none;
+        font-size: 16px;
+        font-weight: 700;
+        padding-left: 0;
+    }
+    .header__menu-item {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .header__menu-link--best::before {
+        content: "";
+        position: absolute;
+        top: 9px;
+        left: 1px;
+        background: url(../img/012-fire.svg) 50% 50% no-repeat;
+        background-size: 20px;
+        width: 20px;
+        height: 20px;
+    }
+    .header__menu-link--best:hover::before {
+        top: 9px;
+        left: 1px;
+        animation: bounce 1s 1 ease-in-out;
+    }
+    .header__menu-link--news::before {
+        content: "";
+        position: absolute;
+        top: 9px;
+        left: 0;
+        background: url(../img/004-news.svg) 50% 50% no-repeat;
+        background-size: 20px;
+        width: 20px;
+        height: 20px;
+    }
+    .header__menu-link--news:hover::before {
+        animation: bounce 1s 1 ease-in-out;
+    }
+    .header__menu-link--biog::before {
+        content: "";
+        position: absolute;
+        top: 9px;
+        left: 0;
+        background: url(../img/boy.svg) 50% 50% no-repeat;
+        background-size: 19px;
+        width: 20px;
+        height: 20px;
+    }
+    .header__menu-link--biog:hover::before {
+        animation: bounce 1s 1 ease-in-out;
+    }
+    .header__menu-link--blog::before {
+        content: "";
+        position: absolute;
+        top: 9px;
+        left: 0;
+        background: url(../img/005-blogging.svg) 50% 50% no-repeat;
+        background-size: 20px;
+        width: 20px;
+        height: 20px;
+    }
+    .header__menu-link--blog:hover::before {
+        animation: bounce 1s 1 ease-in-out;
+    }
+    .header__menu-link {
+        color: white;
+        position: relative;
+        padding-bottom: 15px;
+        padding-left: 25px;
+        padding-top: 10px;
+    }
+    .header__menu-link:hover {
+        color: #94edff;
+        transition: color ease-out 0.3s;
+        animation: neon-text 0.8s ease-in-out infinite alternate;
+    }
+    .header__menu-link::after {
+        content: "";
+        display: block;
+        position: relative;
+        top: 0;
+        width: 100%;
+        height: 4px;
+        background-color: $green;
+        box-shadow: 0 0 2px $green, 0 0 5px $green, 0 0 10px $green, 0 0 12px $green;
+        transform-origin: right;
+        transform: scaleX(0);
+        border-radius: 10px;
+        transition: transform ease-out 0.3s;
+        animation: neon-line 0.8s ease-in-out infinite alternate;
+    }
+    .header__menu-link:hover::after {
+        transition: transform ease-out 0.3s;
+        transform-origin: left;
+        transform: scaleX(1);
+    }
+    .header__search {
+        display: block;
+        height: 50px;
+        margin-top: 21px;
+        margin-right: 10px;
+    }
+    .search__form {
+        position: relative;
+    }
+    .search__box {
+        box-sizing: border-box;
+        width: 396px;
+        height: 36px;
+        background-color: #ffffff00;
+        outline: none;
+        border: solid 1px $blue;
+        margin-top: 0;
+        color: #afaaaa;
+        font-size: 16px;
+        font-weight: 100;
+        letter-spacing: 0;
+        border-radius: 10px;
+        padding-left: 16px;
+        padding-right: 36px;
+    }
+    .search__box:focus {
+        box-shadow: 0 0 2px $blue, 0 0 5px $blue, 0 0 10px $blue, 0 0 20px $blue;
+    }
+    .search__button {
+        background: url(../img/search.webp) 50% 50% no-repeat;
+        border: none;
+        width: 30px;
+        height: 30px;
+        outline: none;
+        position: absolute;
+        right: 5px;
+        top: -2px;
+        transition: transform 0.2s ease-in-out;
+        padding: 20px;
+    }
+    .search__button:hover {
+        background: url(../img/search-focus.webp) 50% 50% no-repeat;
+        transform: rotate(-90deg);
+        transition: transform 0.2s ease-in-out;
+        height: 30px;
+        width: 30px;
+        right: 5px;
+        top: -3px;
+    }
 }
 
 @keyframes neon-line {
