--- a/source/sass/materials/materials.scss
+++ b/source/sass/materials/materials.scss
@@ -3,13 +3,10 @@
     position: relative;
     flex-direction: column;
     background: url(../img/background.webp);
-    margin-top: 50px;
-    margin-right: 27px;
-    padding: 64px 38px 100px 38px;
     z-index: 10;
-    min-width: 961px;
-    width: 1083px;
+    width: 100%;
     box-sizing: border-box;
+    margin-top: 14px;
 }
 
 .materials-portfolio {
@@ -20,11 +17,22 @@
     content: "";
     position: absolute;
     width: 100%;
-    top: 27px;
+    top: 25px;
     left: 0px;
     height: 3px;
     opacity: 0.5;
     animation: neon-line-materials 5s ease infinite;
+}
+
+.materials__box::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    top: 24px;
+    height: 3px;
+    background: linear-gradient(47deg, #fd00ff, #0032ff, #00ffa7, #ff00f5);
+    background-size: 600% 600%;
+    animation: gradient-anim 10s ease infinite;
 }
 
 .materials__box--portfolio {
@@ -36,14 +44,14 @@
 }
 
 .materials__title {
-    display: inline-block;
-    font-size: 25px;
-    letter-spacing: -1.8px;
+    text-align: center;
+    font-size: 20px;
+    letter-spacing: -1px;
     font-family: $bold;
     text-transform: uppercase;
     margin-top: 0;
     margin-left: 2px;
-    margin-bottom: 24px;
+    margin-bottom: 20px;
     background: linear-gradient(140deg, #989898, #eeeeee);
     -webkit-background-clip: text;
     background-clip: text;
@@ -55,12 +63,24 @@
     position: relative;
 }
 
+.materials__title-sorting {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+}
+
+.materials__sorting-box {
+    margin-left: 10px;
+    position: relative;
+}
+
 .materials__sorting {
     position: absolute;
-    left: 150px;
-    width: 23px;
-    height: 23px;
-    top: 3px;
+    top: 5px;
+    width: 15px;
+    height: 15px;
     cursor: pointer;
 }
 
@@ -68,15 +88,59 @@
     fill: $blue;
 }
 
-.materials__box::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    top: 28px;
-    height: 3px;
-    background: linear-gradient(47deg, #fd00ff, #0032ff, #00ffa7, #ff00f5);
-    background-size: 600% 600%;
-    animation: gradient-anim 10s ease infinite;
+@media (min-width: $desktop-width) {
+    .materials {
+        margin-top: 50px;
+        margin-right: 27px;
+        padding: 64px 38px 100px 38px;
+        min-width: 961px;
+        width: 1083px;
+    }
+    .materials__box::after {
+        top: 27px;
+        animation: neon-line-materials 5s ease infinite;
+    }
+    .materials__box--portfolio {
+        padding-top: 0;
+    }
+    .materials__box--portfolio::after {
+        display: none;
+    }
+    .materials__title {
+        display: inline-block;
+        font-size: 25px;
+        letter-spacing: -1.8px;
+        font-family: $bold;
+        text-transform: uppercase;
+        margin-top: 0;
+        margin-left: 2px;
+        margin-bottom: 24px;
+        background: linear-gradient(140deg, #989898, #eeeeee);
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        position: relative;
+    }
+    .materials__title-sorting {
+        justify-content: flex-start;
+    }
+    .materials__sorting {
+        width: 20px;
+        height: 20px;
+    }
+    .materials__path-2 {
+        fill: $blue;
+    }
+    .materials__box::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        top: 28px;
+        height: 3px;
+        background: linear-gradient(47deg, #fd00ff, #0032ff, #00ffa7, #ff00f5);
+        background-size: 600% 600%;
+        animation: gradient-anim 10s ease infinite;
+    }
 }
 
 @keyframes gradient-anim {
