--- a/source/sass/statistic/statistic.scss
+++ b/source/sass/statistic/statistic.scss
@@ -76,7 +76,7 @@
     position: relative;
 }
 
-svg {
+.statistic_pulse svg {
     position: absolute;
     border-radius: 50%;
     margin: 0 auto;
