--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,4 +1,7 @@
+$width-400: 400px;
+$width-600: 600px;
 $tablet-width: 768px;
+$width-1000: 1000px;
 $desktop-width: 1300px;
 $bold: 'Roboto',
 sans-serif;
