--- a/source/sass/slideout/slideout.scss
+++ b/source/sass/slideout/slideout.scss
@@ -1,25 +1,55 @@
 .slideout {
-    position: fixed;
-    left: 15px;
-    bottom: 15px;
-    z-index: 100;
-    width: 75px;
-    height: 75px;
+    position: absolute;
+    top: 12px;
+    left: 12px;
+    width: 50px;
+    height: 50px;
+    background-color: $blue;
+    box-shadow: 0 0 5px $blue, 0 0 10px $blue, 0 0 15px $blue;
+    border-radius: 50%;
+    z-index: 10;
+    transform: rotate(180deg);
     cursor: pointer;
 }
 
-.slideout__box {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 75px;
-    width: 75px;
+.slideout__burger,
+.slideout__burger::before,
+.slideout__burger::after {
+    position: absolute;
+    top: 50%;
+    margin-top: -1px;
+    left: 50%;
+    margin-left: -10px;
+    width: 20px;
+    height: 2px;
+    background-color: $carbon;
 }
 
-.slideout__img--close {
-    display: none;
+.slideout__burger::before,
+.slideout__burger::after {
+    content: '';
+    display: block;
+    transition: 0.2s;
+}
+
+.slideout__burger::before {
+    transform: translateY(-5px);
+}
+
+.slideout__burger::after {
+    transform: translateY(5px);
+}
+
+.slideout__burger--active:before {
+    transform: rotate(-35deg);
+    width: 10px;
+    transform-origin: left bottom;
+}
+
+.slideout__burger--active:after {
+    transform: rotate(35deg);
+    width: 10px;
+    transform-origin: left top;
 }
 
 @media (min-width: $desktop-width) {
