--- a/source/sass/social/social.scss
+++ b/source/sass/social/social.scss
@@ -2,7 +2,8 @@
     display: inline-block;
     position: relative;
     font-size: 25px;
-    letter-spacing: -1.8px;
+    white-space: nowrap;
+    letter-spacing: -1.2px;
     margin-left: 19px;
     font-family: $bold;
     text-transform: uppercase;
