--- a/source/sass/global-style.scss
+++ b/source/sass/global-style.scss
@@ -20,7 +20,10 @@ li {
 }
 
 .overflow-hide {
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-x: hidden;
+    height: 100vh;
+    position: fixed;
 }
 
 .overflow-visible {
