--- a/source/sass/skills/skills.scss
+++ b/source/sass/skills/skills.scss
@@ -4,7 +4,7 @@
 
 .skills__wrapper {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     padding: 0;
     margin: 0;
@@ -12,53 +12,26 @@
 }
 
 .skills__list {
-    width: 47%;
+    width: 100%;
     font-size: 20px;
     margin-bottom: 10px;
     font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
 .skills__name {
+    text-align: center;
     position: relative;
-    display: inline-block;
-    padding-right: 45px;
-}
-
-.skills__name::after {
-    content: "";
-    background: url() 50% 50% no-repeat;
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    right: 0px;
-    top: 5px;
-}
-
-.skills__name--skill::after {
-    background: url(../img/001-thinking.svg);
-    background-size: 30px;
-}
-
-.skills__name--guarant::after {
-    background: url(../img/004-security.svg);
-    background-size: 30px;
-}
-
-.skills__name--payment::after {
-    background: url(../img/003-coin.svg);
-    background-size: 30px;
-}
-
-.skills__name--clock::after {
-    background: url(../img/002-time.svg);
-    background-size: 30px;
+    display: block;
+    white-space: nowrap;
+    font-size: 20px;
 }
 
 .skills__name::before {
     content: "";
     position: absolute;
     width: 100%;
-    top: 42px;
+    top: 30px;
+    left: 0;
     height: 3px;
     background: linear-gradient(47deg, #ff002b, #fd9800, #eeff00, #fd9800, #ff002b);
     background-size: 300% 300%;
@@ -74,4 +47,95 @@
     font-size: 14px;
     margin-bottom: 10px;
     font-family: 'M PLUS Rounded 1c', sans-serif;
+}
+
+@media(min-width: $width-400) {
+    .skills__name {
+        font-size: 23px;
+    }
+    .skills__name::after {
+        content: "";
+        background: url() 50% 50% no-repeat;
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        right: 0px;
+        top: 3px;
+    }
+    .skills__name--skill::after {
+        background: url(../img/001-thinking.svg);
+        background-size: 30px;
+    }
+    .skills__name--guarant::after {
+        background: url(../img/004-security.svg);
+        background-size: 30px;
+    }
+    .skills__name--payment::after {
+        background: url(../img/003-coin.svg);
+        background-size: 30px;
+    }
+    .skills__name--clock::after {
+        background: url(../img/002-time.svg);
+        background-size: 30px;
+    }
+    .skills__name::before {
+        top: 35px;
+    }
+}
+
+@media(min-width: $width-600) {
+    .skills__name {
+        font-size: 30px;
+    }
+    .skills__name::after {
+        top: 5px;
+    }
+    .skills__name::before {
+        top: 40px;
+    }
+}
+
+@media (min-width: $tablet-width) {
+    .skills {
+        margin-bottom: 100px;
+    }
+    .skills__wrapper {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding: 0;
+        margin: 0;
+        justify-content: space-between;
+    }
+    .skills__list {
+        width: 47%;
+        font-size: 20px;
+        margin-bottom: 10px;
+        font-family: 'M PLUS Rounded 1c', sans-serif;
+    }
+    .skills__name {
+        font-size: 1.5em;
+        position: relative;
+        display: inline-block;
+        padding-right: 45px;
+    }
+    .skills__name::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        top: 42px;
+        height: 3px;
+        background: linear-gradient(47deg, #ff002b, #fd9800, #eeff00, #fd9800, #ff002b);
+        background-size: 300% 300%;
+        animation: gradient-anim-social 10s ease infinite;
+    }
+    .skills__items {
+        width: 100%;
+        padding: 0;
+    }
+    .skills__item {
+        font-size: 14px;
+        margin-bottom: 10px;
+        font-family: 'M PLUS Rounded 1c', sans-serif;
+    }
 }
