--- a/source/sass/welcome/welcome.scss
+++ b/source/sass/welcome/welcome.scss
@@ -1,405 +1,316 @@
 .welcome {
-    margin-bottom: 20px;
-}
-
-.welcome__box {
-    display: flex;
-    flex-wrap: wrap;
-    width: 931px;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-.welcome__flip-container {
-    perspective: 1000;
-    margin-left: -21px;
-    margin-right: -21px;
-    margin-top: -2px;
-}
-
-.welcome__flip-container .welcome__flipper {
-    animation: gg1 0.5s ease-in-out 1 forwards;
-    animation-delay: 3s;
-}
-
-.welcome__flip-container,
-.welcome__front,
-.welcome__back {
-    width: 89px;
-    height: 77px;
-    transition: 0.6s;
-    transform-style: preserve-3d;
-}
-
-
-/* здесь находится скорость перевертывания */
-
-.welcome__flipper {
-    transition: 0.6s;
-    transform-style: preserve-3d;
-    position: relative;
-}
-
-
-/* скройте обратную сторону во время переворота */
-
-.welcome__front,
-.welcome__back {
-    backface-visibility: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-
-/* переверните сторону при проведении мышью */
-
-// .welcome__flip-container:hover {
-//     .welcome__front {
-//         transform: rotateY(180deg);
-//         transition: 0.6s;
-//         transform-style: preserve-3d;
-//     }
-//     .welcome__back {
-//         transform: rotateY(0deg);
-//         transition: 0.6s;
-//         transform-style: preserve-3d;
-//     }
-// }
-
-/* лицевая сторона размещена над обратной */
-
-.welcome__front {
-    transform: rotateY(0deg);
-    background-size: 86px;
-}
-
-
-/* обратная, изначально скрытая сторона */
-
-.welcome__back {
-    position: relative;
-    background-size: 100px;
-    transform: rotateX(180deg);
-    transform: rotateY(180deg);
-}
-
-.welcome__text {
-    font-size: 34px;
-    position: absolute;
-    left: 31px;
-    top: 12px;
-    text-transform: uppercase;
-    font-family: 'M PLUS Rounded 1c', sans-serif;
-}
-
-.welcome__flip-container .welcome__flipper--01 {
-    animation-delay: 3.1s;
-}
-
-.welcome__flip-container .welcome__flipper--02 {
-    animation-delay: 3.3s;
-}
-
-.welcome__flip-container .welcome__flipper--03 {
-    animation-delay: 3.5s;
-}
-
-.welcome__flip-container .welcome__flipper--04 {
-    animation-delay: 3.7s;
-}
-
-.welcome__flip-container .welcome__flipper--05 {
-    animation-delay: 3.8s;
-}
-
-.welcome__flip-container .welcome__flipper--06 {
-    animation-delay: 3.9s;
-}
-
-.welcome__flip-container .welcome__flipper--07 {
-    animation-delay: 3.6s;
-}
-
-.welcome__flip-container .welcome__flipper--08 {
-    animation-delay: 3.4s;
-}
-
-.welcome__flip-container .welcome__flipper--09 {
-    animation-delay: 3.2s;
-}
-
-.welcome__flip-container .welcome__flipper--10 {
-    animation-delay: 3s;
-}
-
-.welcome__flip-container .welcome__flipper--11 {
-    animation-delay: 3.2s;
-}
-
-.welcome__flip-container .welcome__flipper--12 {
-    animation-delay: 3.4s;
-}
-
-.welcome__flip-container .welcome__flipper--13 {
-    animation-delay: 3.6s;
-}
-
-.welcome__flip-container .welcome__flipper--14 {
-    animation-delay: 3.9s;
-}
-
-.welcome__flip-container .welcome__flipper--15 {
-    animation-delay: 3.8s;
-}
-
-.welcome__flip-container .welcome__flipper--16 {
-    animation-delay: 3.7s;
-}
-
-.welcome__flip-container .welcome__flipper--17 {
-    animation-delay: 3.5s;
-}
-
-.welcome__flip-container .welcome__flipper--18 {
-    animation-delay: 3.3s;
-}
-
-.welcome__flip-container .welcome__flipper--19 {
-    animation-delay: 3.1s;
-}
-
-.welcome__flip-container .welcome__flipper--20 {
-    animation-delay: 4;
-}
-
-.welcome__flip-container .welcome__flipper--21 {
-    animation-delay: 4.1s;
-}
-
-.welcome__flip-container .welcome__flipper--22 {
-    animation-delay: 4.2s;
-}
-
-.welcome__flip-container .welcome__flipper--23 {
-    animation-delay: 4.3s;
-}
-
-.welcome__flip-container .welcome__flipper--24 {
-    animation-delay: 4.4s;
-}
-
-.welcome__flip-container .welcome__flipper--25 {
-    animation-delay: 4.5s;
-}
-
-.welcome__flip-container .welcome__flipper--26 {
-    animation-delay: 4.6s;
-}
-
-.welcome__flip-container .welcome__flipper--27 {
-    animation-delay: 4.7s;
-}
-
-.welcome__flip-container .welcome__flipper--28 {
-    animation-delay: 4.8s;
-}
-
-.welcome__flip-container .welcome__flipper--29 {
-    animation-delay: 4.9s;
-}
-
-.welcome__flip-container .welcome__flipper--30 {
-    animation-delay: 4.8s;
-}
-
-.welcome__flip-container .welcome__flipper--31 {
-    animation-delay: 4.7s;
-}
-
-.welcome__flip-container .welcome__flipper--32 {
-    animation-delay: 4.6s;
-}
-
-.welcome__flip-container .welcome__flipper--33 {
-    animation-delay: 4.5s;
-}
-
-.welcome__flip-container .welcome__flipper--34 {
-    animation-delay: 4.4s;
-}
-
-.welcome__flip-container .welcome__flipper--35 {
-    animation-delay: 4.3s;
-}
-
-.welcome__flip-container .welcome__flipper--36 {
-    animation-delay: 4.2s;
-}
-
-.welcome__flip-container .welcome__flipper--37 {
-    animation-delay: 4.1s;
-}
-
-.welcome__flip-container .welcome__flipper--38 {
-    animation-delay: 4s;
-}
-
-.welcome__flip-container .welcome__flipper--39 {
-    animation-delay: 5.9s;
-}
-
-.welcome__flip-container .welcome__flipper--40 {
-    animation-delay: 5.8s;
-}
-
-.welcome__flip-container .welcome__flipper--41 {
-    animation-delay: 5.7s;
-}
-
-.welcome__flip-container .welcome__flipper--42 {
-    animation-delay: 5.6s;
-}
-
-.welcome__flip-container .welcome__flipper--43 {
-    animation-delay: 5.5s;
-}
-
-.welcome__flip-container .welcome__flipper--44 {
-    animation-delay: 5.4s;
-}
-
-.welcome__flip-container .welcome__flipper--45 {
-    animation-delay: 5.3s;
-}
-
-.welcome__flip-container .welcome__flipper--46 {
-    animation-delay: 5.2s;
-}
-
-.welcome__flip-container .welcome__flipper--47 {
-    animation-delay: 5.1s;
-}
-
-.welcome__flip-container .welcome__flipper--48 {
-    animation-delay: 5s;
-}
-
-.welcome__flip-container .welcome__flipper--49 {
-    animation-delay: 5.1s;
-}
-
-.welcome__flip-container .welcome__flipper--50 {
-    animation-delay: 5.2s;
-}
-
-.welcome__flip-container .welcome__flipper--51 {
-    animation-delay: 5.3s;
-}
-
-.welcome__flip-container .welcome__flipper--52 {
-    animation-delay: 5.4s;
-}
-
-.welcome__flip-container .welcome__flipper--53 {
-    animation-delay: 5.5s;
-}
-
-.welcome__flip-container .welcome__flipper--54 {
-    animation-delay: 5.6s;
-}
-
-.welcome__flip-container .welcome__flipper--55 {
-    animation-delay: 5.7s;
-}
-
-.welcome__flip-container .welcome__flipper--56 {
-    animation-delay: 5.8s;
-}
-
-.welcome__flip-container .welcome__flipper--57 {
-    animation-delay: 5.9;
-    ;
-}
-
-.welcome__flip-container .welcome__flipper--58 {
-    animation-delay: 6s;
-}
-
-.welcome__flip-container .welcome__flipper--59 {
-    animation-delay: 6.1s;
-}
-
-.welcome__flip-container .welcome__flipper--60 {
-    animation-delay: 6.2s;
-}
-
-.welcome__flip-container .welcome__flipper--61 {
-    animation-delay: 6.3s;
-}
-
-.welcome__flip-container .welcome__flipper--62 {
-    animation-delay: 6.4s;
-}
-
-.welcome__flip-container .welcome__flipper--63 {
-    animation-delay: 6.5s;
-}
-
-.welcome__flip-container .welcome__flipper--64 {
-    animation-delay: 6.6s;
-}
-
-.welcome__flip-container .welcome__flipper--65 {
-    animation-delay: 6.7s;
-}
-
-.welcome__flip-container .welcome__flipper--66 {
-    animation-delay: 6.8s;
-}
-
-.welcome__flip-container .welcome__flipper--67 {
-    animation-delay: 6.9s;
-}
-
-.welcome__flip-container .welcome__flipper--68 {
-    animation-delay: 6.8s;
-}
-
-.welcome__flip-container .welcome__flipper--69 {
-    animation-delay: 6.7s;
-}
-
-.welcome__flip-container .welcome__flipper--70 {
-    animation-delay: 6.6s;
-}
-
-.welcome__flip-container .welcome__flipper--71 {
-    animation-delay: 6.5s;
-}
-
-.welcome__flip-container .welcome__flipper--72 {
-    animation-delay: 6.4s;
-}
-
-.welcome__flip-container .welcome__flipper--73 {
-    animation-delay: 6.3s;
-}
-
-.welcome__flip-container .welcome__flipper--74 {
-    animation-delay: 6.2s;
-}
-
-.welcome__flip-container .welcome__flipper--75 {
-    animation-delay: 6.1s;
-}
-
-.welcome__flip-container .welcome__flipper--76 {
-    animation-delay: 6s;
-}
-
-@keyframes gg1 {
-    100% {
+    display: none;
+}
+
+@media (min-width: $width-1000) {
+    .welcome {
+        margin-bottom: 20px;
+        display: block;
+    }
+    .welcome__box {
+        display: flex;
+        flex-wrap: wrap;
+        width: 931px;
+        margin-right: auto;
+        margin-left: auto;
+    }
+    .welcome__flip-container {
+        perspective: 1000;
+        margin-left: -21px;
+        margin-right: -21px;
+        margin-top: -2px;
+    }
+    .welcome__flip-container .welcome__flipper {
+        animation: gg1 0.5s ease-in-out 1 forwards;
+        animation-delay: 3s;
+    }
+    .welcome__flip-container,
+    .welcome__front,
+    .welcome__back {
+        width: 89px;
+        height: 77px;
+        transition: 0.6s;
+        transform-style: preserve-3d;
+    }
+    /* здесь находится скорость перевертывания */
+    .welcome__flipper {
+        transition: 0.6s;
+        transform-style: preserve-3d;
+        position: relative;
+    }
+    /* скройте обратную сторону во время переворота */
+    .welcome__front,
+    .welcome__back {
+        backface-visibility: hidden;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+    /* переверните сторону при проведении мышью */
+    // .welcome__flip-container:hover {
+    //     .welcome__front {
+    //         transform: rotateY(180deg);
+    //         transition: 0.6s;
+    //         transform-style: preserve-3d;
+    //     }
+    //     .welcome__back {
+    //         transform: rotateY(0deg);
+    //         transition: 0.6s;
+    //         transform-style: preserve-3d;
+    //     }
+    // }
+    /* лицевая сторона размещена над обратной */
+    .welcome__front {
+        transform: rotateY(0deg);
+        background-size: 86px;
+    }
+    /* обратная, изначально скрытая сторона */
+    .welcome__back {
+        position: relative;
+        background-size: 100px;
+        transform: rotateX(180deg);
         transform: rotateY(180deg);
+    }
+    .welcome__text {
+        font-size: 34px;
+        position: absolute;
+        left: 31px;
+        top: 12px;
+        text-transform: uppercase;
+        font-family: 'M PLUS Rounded 1c', sans-serif;
+    }
+    .welcome__flip-container .welcome__flipper--01 {
+        animation-delay: 3.1s;
+    }
+    .welcome__flip-container .welcome__flipper--02 {
+        animation-delay: 3.3s;
+    }
+    .welcome__flip-container .welcome__flipper--03 {
+        animation-delay: 3.5s;
+    }
+    .welcome__flip-container .welcome__flipper--04 {
+        animation-delay: 3.7s;
+    }
+    .welcome__flip-container .welcome__flipper--05 {
+        animation-delay: 3.8s;
+    }
+    .welcome__flip-container .welcome__flipper--06 {
+        animation-delay: 3.9s;
+    }
+    .welcome__flip-container .welcome__flipper--07 {
+        animation-delay: 3.6s;
+    }
+    .welcome__flip-container .welcome__flipper--08 {
+        animation-delay: 3.4s;
+    }
+    .welcome__flip-container .welcome__flipper--09 {
+        animation-delay: 3.2s;
+    }
+    .welcome__flip-container .welcome__flipper--10 {
+        animation-delay: 3s;
+    }
+    .welcome__flip-container .welcome__flipper--11 {
+        animation-delay: 3.2s;
+    }
+    .welcome__flip-container .welcome__flipper--12 {
+        animation-delay: 3.4s;
+    }
+    .welcome__flip-container .welcome__flipper--13 {
+        animation-delay: 3.6s;
+    }
+    .welcome__flip-container .welcome__flipper--14 {
+        animation-delay: 3.9s;
+    }
+    .welcome__flip-container .welcome__flipper--15 {
+        animation-delay: 3.8s;
+    }
+    .welcome__flip-container .welcome__flipper--16 {
+        animation-delay: 3.7s;
+    }
+    .welcome__flip-container .welcome__flipper--17 {
+        animation-delay: 3.5s;
+    }
+    .welcome__flip-container .welcome__flipper--18 {
+        animation-delay: 3.3s;
+    }
+    .welcome__flip-container .welcome__flipper--19 {
+        animation-delay: 3.1s;
+    }
+    .welcome__flip-container .welcome__flipper--20 {
+        animation-delay: 4;
+    }
+    .welcome__flip-container .welcome__flipper--21 {
+        animation-delay: 4.1s;
+    }
+    .welcome__flip-container .welcome__flipper--22 {
+        animation-delay: 4.2s;
+    }
+    .welcome__flip-container .welcome__flipper--23 {
+        animation-delay: 4.3s;
+    }
+    .welcome__flip-container .welcome__flipper--24 {
+        animation-delay: 4.4s;
+    }
+    .welcome__flip-container .welcome__flipper--25 {
+        animation-delay: 4.5s;
+    }
+    .welcome__flip-container .welcome__flipper--26 {
+        animation-delay: 4.6s;
+    }
+    .welcome__flip-container .welcome__flipper--27 {
+        animation-delay: 4.7s;
+    }
+    .welcome__flip-container .welcome__flipper--28 {
+        animation-delay: 4.8s;
+    }
+    .welcome__flip-container .welcome__flipper--29 {
+        animation-delay: 4.9s;
+    }
+    .welcome__flip-container .welcome__flipper--30 {
+        animation-delay: 4.8s;
+    }
+    .welcome__flip-container .welcome__flipper--31 {
+        animation-delay: 4.7s;
+    }
+    .welcome__flip-container .welcome__flipper--32 {
+        animation-delay: 4.6s;
+    }
+    .welcome__flip-container .welcome__flipper--33 {
+        animation-delay: 4.5s;
+    }
+    .welcome__flip-container .welcome__flipper--34 {
+        animation-delay: 4.4s;
+    }
+    .welcome__flip-container .welcome__flipper--35 {
+        animation-delay: 4.3s;
+    }
+    .welcome__flip-container .welcome__flipper--36 {
+        animation-delay: 4.2s;
+    }
+    .welcome__flip-container .welcome__flipper--37 {
+        animation-delay: 4.1s;
+    }
+    .welcome__flip-container .welcome__flipper--38 {
+        animation-delay: 4s;
+    }
+    .welcome__flip-container .welcome__flipper--39 {
+        animation-delay: 5.9s;
+    }
+    .welcome__flip-container .welcome__flipper--40 {
+        animation-delay: 5.8s;
+    }
+    .welcome__flip-container .welcome__flipper--41 {
+        animation-delay: 5.7s;
+    }
+    .welcome__flip-container .welcome__flipper--42 {
+        animation-delay: 5.6s;
+    }
+    .welcome__flip-container .welcome__flipper--43 {
+        animation-delay: 5.5s;
+    }
+    .welcome__flip-container .welcome__flipper--44 {
+        animation-delay: 5.4s;
+    }
+    .welcome__flip-container .welcome__flipper--45 {
+        animation-delay: 5.3s;
+    }
+    .welcome__flip-container .welcome__flipper--46 {
+        animation-delay: 5.2s;
+    }
+    .welcome__flip-container .welcome__flipper--47 {
+        animation-delay: 5.1s;
+    }
+    .welcome__flip-container .welcome__flipper--48 {
+        animation-delay: 5s;
+    }
+    .welcome__flip-container .welcome__flipper--49 {
+        animation-delay: 5.1s;
+    }
+    .welcome__flip-container .welcome__flipper--50 {
+        animation-delay: 5.2s;
+    }
+    .welcome__flip-container .welcome__flipper--51 {
+        animation-delay: 5.3s;
+    }
+    .welcome__flip-container .welcome__flipper--52 {
+        animation-delay: 5.4s;
+    }
+    .welcome__flip-container .welcome__flipper--53 {
+        animation-delay: 5.5s;
+    }
+    .welcome__flip-container .welcome__flipper--54 {
+        animation-delay: 5.6s;
+    }
+    .welcome__flip-container .welcome__flipper--55 {
+        animation-delay: 5.7s;
+    }
+    .welcome__flip-container .welcome__flipper--56 {
+        animation-delay: 5.8s;
+    }
+    .welcome__flip-container .welcome__flipper--57 {
+        animation-delay: 5.9;
+        ;
+    }
+    .welcome__flip-container .welcome__flipper--58 {
+        animation-delay: 6s;
+    }
+    .welcome__flip-container .welcome__flipper--59 {
+        animation-delay: 6.1s;
+    }
+    .welcome__flip-container .welcome__flipper--60 {
+        animation-delay: 6.2s;
+    }
+    .welcome__flip-container .welcome__flipper--61 {
+        animation-delay: 6.3s;
+    }
+    .welcome__flip-container .welcome__flipper--62 {
+        animation-delay: 6.4s;
+    }
+    .welcome__flip-container .welcome__flipper--63 {
+        animation-delay: 6.5s;
+    }
+    .welcome__flip-container .welcome__flipper--64 {
+        animation-delay: 6.6s;
+    }
+    .welcome__flip-container .welcome__flipper--65 {
+        animation-delay: 6.7s;
+    }
+    .welcome__flip-container .welcome__flipper--66 {
+        animation-delay: 6.8s;
+    }
+    .welcome__flip-container .welcome__flipper--67 {
+        animation-delay: 6.9s;
+    }
+    .welcome__flip-container .welcome__flipper--68 {
+        animation-delay: 6.8s;
+    }
+    .welcome__flip-container .welcome__flipper--69 {
+        animation-delay: 6.7s;
+    }
+    .welcome__flip-container .welcome__flipper--70 {
+        animation-delay: 6.6s;
+    }
+    .welcome__flip-container .welcome__flipper--71 {
+        animation-delay: 6.5s;
+    }
+    .welcome__flip-container .welcome__flipper--72 {
+        animation-delay: 6.4s;
+    }
+    .welcome__flip-container .welcome__flipper--73 {
+        animation-delay: 6.3s;
+    }
+    .welcome__flip-container .welcome__flipper--74 {
+        animation-delay: 6.2s;
+    }
+    .welcome__flip-container .welcome__flipper--75 {
+        animation-delay: 6.1s;
+    }
+    .welcome__flip-container .welcome__flipper--76 {
+        animation-delay: 6s;
+    }
+    @keyframes gg1 {
+        100% {
+            transform: rotateY(180deg);
+        }
     }
 }
